--- a/Views/Shared/_publicLayout.cshtml
+++ b/Views/Shared/_publicLayout.cshtml
@@ -6,12 +6,9 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-    <h2>Welcome to definitely-not-Trello!</h2>
-    <p>This is a tool for managing tasks, alone or in groups.</p>
-    <p>
-        <a href="~/signUp.html">Sign up</a>
-        or
-        <a href="~/login.html">log in</a>
-    </p>
+    <nav>
+        <h1>notTrello</h1>
+    </nav>
+    @RenderBody()
 </body>
 </html>
