--- a/Views/Main/TodoList.cshtml
+++ b/Views/Main/TodoList.cshtml
@@ -9,20 +9,20 @@
 <a href="users/addProject">Add new project</a>
 @foreach (Project project in (List<Project>)ViewData["projects"])
  {
-    <ul class="project">
-        <li class="title">@project.Title</li>
-        <li class="descripton">@project.Description</li>
-        <li class="assignees">
-            <p>Responsibles:</p>
-            <ul>
-                @foreach (AssigneeProject assigneeProject in project.AssigneeProjects)
-                {
-                    <li>@assigneeProject.Assignee.UserName</li>
-                }
-            </ul>
-        </li>
-        <li>
-            <a href="users/projects/@project.Id">Details</a>
-        </li>
-    </ul>
+<ul class="project">
+    <li class="title">Title: @project.Title</li>
+    <li class="descripton">Description: @project.Description</li>
+    <li class="assignees">
+        <p>Responsibles:</p>
+        <ul>
+            @foreach (AssigneeProject assigneeProject in project.AssigneeProjects)
+            {
+                <li>@assigneeProject.Assignee.UserName</li>
+            }
+        </ul>
+    </li>
+    <li>
+        <a href="users/projects/@project.Id">Details</a>
+    </li>
+</ul>
  }
