--- a/Views/Project/_CardsPartial.cshtml
+++ b/Views/Project/_CardsPartial.cshtml
@@ -17,7 +17,7 @@
                 </ul>
             </li>
             <li>
-                <a href="@card.Project.Id/cards/@card.Id/switchDone">@ViewData["switchName"]</a> 
+                <a href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a> 
             </li>
         </ul>
     }
