--- a/Views/Public/main.cshtml
+++ b/Views/Public/main.cshtml
@@ -2,6 +2,17 @@
     Layout = "_publicLayout";
 }
 
-<h2>Task Manager is a free, lightweight platform for teams to keep track of their projects.</h2>
-<p>Using our API services, it's easy to integrate with other tools.</p>
-<p>Sign up now!</p>
+<h1 class="title">TaskManager is a free, lightweight platform for teams to keep track of their projects.</h1>
+<p>Accounts are free, and you can choose to sign in using Google. <a href="/public/signUp">Sign up</a> now!</p>
+<p>To get familiar with our platform, sign in as TestUser (password: TestUser)!</p>
+<div>
+    <p>This is a study project written for learning, among other things,</p>
+    <ul>
+        <li>authentication</li>
+        <li>authorization and role management</li>
+        <li>manipulating a somewhat complex object graph in the database</li>
+        <li>translating between DAOs and very different DTOs</li>
+        <li>creating and using middleware</li>
+    </ul>
+    <p>The code can be found at https://github.com/zsofi-gagyi/notTrello</p>
+</div>
