--- a/Views/Shared/_publicLayout.cshtml
+++ b/Views/Shared/_publicLayout.cshtml
@@ -1,12 +1,24 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-    @await Html.PartialAsync("_LayoutHeadPartial.cshtml")
+@await Html.PartialAsync("_LayoutHeadPartial.cshtml")
 <body>
-    <nav>
-        <a href="/users"><h1>Task Manager</h1></a>
-        <a href="/public/signUp">Sign up</a>
-        <a href="/public/login">Log in</a>
-    </nav>
-    @RenderBody()
+    <div class="notfooter">
+        <nav>
+            <div>
+                <a href="/users">
+                    <h1 class="logo">TaskManager</h1>
+                </a>
+            </div>
+            <div>
+                <a href="/public/login">Log in</a>
+                <a id="signup" href="/public/signUp">Sign up</a>
+            </div>
+        </nav>
+        @RenderBody()
+    </div>
+    <div class="footer">
+        <a href="/users/APIguide">For developers: a guide to our API services</a>
+        <p>This app uses the ASP.NET Core framework, and is hosted on Azure.</p>
+    </div>
 </body>
 </html>
