--- a/Views/Shared/_userLayout.cshtml
+++ b/Views/Shared/_userLayout.cshtml
@@ -1,18 +1,25 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>todo web app in C#</title>
-    <link rel="stylesheet" type="text/css" href="/css/styles.css">
-</head>
+@await Html.PartialAsync("_LayoutHeadPartial.cshtml")
 <body>
-    <nav>
-        <a href="/users"><h1>Task Manager</h1></a>
-        <a class="logout" href="/users/APIguide">API guide</a>
-        <p>@User.Identity.Name as @(User.IsInRole("TodoAdmin") ? "Admin" : "User")</p>
-        <a href="/users/changeRole">Change role</a>
-        <a class="logout" href="/logout">Sign out</a>
-    </nav>
-    @RenderBody()
+    <div class="notfooter">
+        <nav>
+            <div>
+                <a href="/users">
+                    <h1 class="logo">TaskManager</h1>
+                </a>
+            </div>
+            <div>
+                <p>@User.Identity.Name as @(User.IsInRole("TodoAdmin") ? "Admin" : "User")</p>
+                <a href="/users/changeRole">Change role</a>
+                <a class="logout" href="/logout">Sign out</a>
+            </div>
+        </nav>
+        @RenderBody()
+    </div>
+    <div class="footer">
+        <a href="/users/APIguide">For developers: a guide to our API services</a>
+        <p>This app uses the ASP.NET Core framework, and is hosted on Azure.</p>
+    </div>
 </body>
 </html>
