--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -1,17 +1,64 @@
-﻿body {
-    font-family: Arial;
+﻿html, body {
+    height: 100%;
 }
 
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+}
+
+a {
+    text-decoration: none;
+}
+
+nav {
+    background-color: #00c9b5;
+    height: 95px;
+    padding: 0 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+    nav div {
+        display: flex;
+    }
+
+        nav div a, nav div p {
+            margin: 10px;
+            padding: 5px;
+        }
+
+        nav div a {
+            color: white;
+        }
+
+        nav div p {
+            color: black;
+        }
+
+            nav div #signup {
+                border: 2px solid white;
+                border-radius: 15px;
+            }
+
+            nav div a .logo {
+                margin: 0;
+                font-family: 'Caveat', cursive;
+                font-size: 55px;
+            }
+
 .project {
-    border:1px solid grey;
+    border: 1px solid grey;
 }
 
 .card {
     border: 1px solid lightpink;
-}
-
-nav {
-    background-color: lightcyan;
 }
 
 td {
@@ -30,3 +77,26 @@ td {
 .red {
     background-color: lightpink;
 }
+
+.notfooter {
+    flex: 1 0 auto;
+}
+
+.footer {
+    flex-shrink: 0;
+    height: 70px;
+    width: 100%;
+    text-align: center;
+    font-weight: 400;
+    color: #707070;
+}
+
+    .footer a {
+        color: #707070;
+        text-decoration: underline;
+    }
+
+    .footer p{
+        margin: 4px;
+        font-size: 16px;
+    }
