--- a/Views/Project/ProjectWithCards.cshtml
+++ b/Views/Project/ProjectWithCards.cshtml
@@ -5,38 +5,40 @@
 @{
     Layout = "_userLayout";
 }
-
-@{var project = (Project)ViewData["project"];
-    <ul class="project">
-        <li class="title">Title: @project.Title</li>
-        <li class="descripton">Description: @project.Description</li>
-        <li class="assignees">
-            <p>Responsibles:</p>
-            <ul>
-                @foreach (AssigneeProject assigneeProject in project.AssigneeProjects)
-                {
-                    <li>@assigneeProject.Assignee.UserName</li>
-                }
+    <div class="displayCardsContainer" id="oneProjectCard">
+        @{var project = (Project)ViewData["project"];
+            <ul class="displayCard">
+                <li class="title" id="oneTitle">@project.Title</li>
+                <li class="description">@project.Description</li>
+                <li class="responsibles">
+                        @foreach (AssigneeProject assigneeProject in project.AssigneeProjects)
+                        {
+                            <span class="responsibleName">@assigneeProject.Assignee.UserName</span>
+                        }
+                </li>
+                <li class="cardsInColumns">
+                    <div class="displayCardsContainer">
+                        <p>To do:</p>
+                        <ul class="displayCard" id="link">
+                            <li class="title">
+                                <a id="createNewLink" href="@project.Id/cards/addCard">Create new card...</a>
+                            </li>
+                        </ul>
+                        @{
+                            ViewData["cards"] = project.Cards.Where(c => !c.Done).ToList();
+                            ViewData["toggleName"] = "Mark as Done";
+                        }
+                        @await Html.PartialAsync("_CardsPartial.cshtml")
+                    </div>
+                    <div class="displayCardsContainer">
+                        <p>Done:</p>
+                        @{
+                            ViewData["cards"] = project.Cards.Where(c => c.Done).ToList();
+                            ViewData["toggleName"] = "Mark as Not Done";
+                        }
+                        @await Html.PartialAsync("_CardsPartial.cshtml")
+                    </div>
+                </li>
             </ul>
-        </li>
-        <li class="cardsInColumns">Cards:
-            <div class="cardsNotDone">
-                <p>To do:</p>
-                <a href="@project.Id/cards/addCard">Create new card</a>
-                @{
-                    ViewData["cards"] = project.Cards.Where(c => !c.Done).ToList();
-                    ViewData["toggleName"] = "Mark as Done";
-                }
-                @await Html.PartialAsync("_CardsPartial.cshtml")
-            </div>
-            <div class="cardsDone">
-                <p>Done:</p>
-                @{
-                    ViewData["cards"] = project.Cards.Where(c => c.Done).ToList();
-                    ViewData["toggleName"] = "Mark as Not Done";
-                }
-                @await Html.PartialAsync("_CardsPartial.cshtml")
-            </div>
-        </li>
-    </ul>
-}
+        }
+        </div>
