--- a/Views/Project/_CardsPartial.cshtml
+++ b/Views/Project/_CardsPartial.cshtml
@@ -3,22 +3,19 @@
 
 @{ foreach (Card card in (List<Card>)ViewData["cards"])
     {
-        <ul class="card">
-            <li>Title: @card.Title</li>
-            <li>Description: @card.Description</li>
-            <li>Deadline: @card.Deadline</li>
-            <li class="assignees">
-                <p>Responsibles: </p>
-                <ul>
-                    @foreach (AssigneeCard assigneeCard in card.AssigneeCards)
-                    {
-                        <li>@assigneeCard.Assignee.UserName</li>
-                    }
-                </ul>
-            </li>
-            <li>
-                <a href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a> 
-            </li>
-        </ul>
+    <ul class="displayCard">
+        <li class=@(card.Done ? "done" : "notDone")>
+            <a href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a>
+        </li>
+        <li class="title">@card.Title</li>
+        <li class="description">@card.Description</li>
+        <li class="description">Deadline: @card.Deadline</li>
+        <li class="responsibles">
+           @foreach (AssigneeCard assigneeCard in card.AssigneeCards)
+            {
+                <span class="responsibleName">@assigneeCard.Assignee.UserName</span>
+            }
+        </li>
+    </ul>
     }
 }
