--- a/Pages/main.cshtml
+++ b/Pages/main.cshtml
@@ -1,9 +1,10 @@
-﻿@{
+﻿@page
+@{
     Layout = "_publicLayout";
 }
 
 <h1 class="title">TaskManager is a free, lightweight platform for teams to keep track of their projects.</h1>
-<p>Accounts are free, and you can choose to sign in using Google. <a href="/public/signUp">Sign up</a> now!</p>
+<p>Accounts are free, and you can choose to sign in using Google. <a href="/signUp">Sign up</a> now!</p>
 <p>To get familiar with our platform, sign in as TestUser (password: TestUser)!</p>
 <div>
     <p>This is a study project written for learning, among other things,</p>
