--- a/Views/Project/ProjectWithCards.cshtml
+++ b/Views/Project/ProjectWithCards.cshtml
@@ -5,10 +5,10 @@
 @{
     Layout = "_userLayout";
 }
-    <div class="displayCardsContainer" id="oneProjectCard">
+    <div class="displayCardsContainer primaryContainer firstContainer">
         @{var project = (Project)ViewData["project"];
-            <ul class="displayCard">
-                <li class="title" id="oneTitle">@project.Title</li>
+            <ul class="displayCard primaryCard">
+                <li class="mainTitle" id="oneTitle">@project.Title</li>
                 <li class="description">@project.Description</li>
                 <li class="responsibles">
                         @foreach (AssigneeProject assigneeProject in project.AssigneeProjects)
@@ -17,9 +17,9 @@
                         }
                 </li>
                 <li class="cardsInColumns">
-                    <div class="displayCardsContainer">
-                        <p>To do:</p>
-                        <ul class="displayCard" id="link">
+                    <div class="displayCardsContainer secondaryContainer">
+                        <p>To do</p>
+                        <ul class="displayCard linkCard">
                             <li class="title">
                                 <a id="createNewLink" href="@project.Id/cards/addCard">Create new card...</a>
                             </li>
@@ -30,8 +30,8 @@
                         }
                         @await Html.PartialAsync("_CardsPartial.cshtml")
                     </div>
-                    <div class="displayCardsContainer">
-                        <p>Done:</p>
+                    <div class="displayCardsContainer secondaryContainer">
+                        <p>Done</p>
                         @{
                             ViewData["cards"] = project.Cards.Where(c => c.Done).ToList();
                             ViewData["toggleName"] = "Mark as Not Done";
