--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -5,7 +5,6 @@
 body {
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    font-size: 24px;
     font-weight: bold;
     display: flex;
     flex-direction: column;
@@ -33,6 +32,7 @@ nav {
         nav div a, nav div p {
             margin: 10px;
             padding: 5px;
+            font-size: 24px;
         }
 
         nav div a {
@@ -54,50 +54,82 @@ nav {
                 font-size: 55px;
             }
 
-
-.cardsInColumns {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
 .displayCardsContainer {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    margin: 0 auto;
+}
+
+    .primaryContainer {
+        width: 80%;
+    }
+
+    .secondaryContainer {
+        width: calc(50% - 12px);
+        border: 3px solid #ebebeb;
+        border-radius: 30px;
+        margin: 0;
+        padding-bottom: 5px;
+    }
+
+        .secondaryContainer p {
+            margin: 10px 0 0 0;
+            font-size: 24px;
+            color: #707070;
+        }
+
+    .firstContainer {
+        margin-top: 30px;
+    }
+
+.cardsInColumns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px 0 0 0;
 }
 
 .displayCard {
-    width: 60%;
-    margin: 10px;
+    box-sizing: border-box;
+    width: calc(100% - 30px);
+    margin: 10px 15px;
     border-radius: 20px;
     padding: 15px;
     background-color: white;
     list-style-type: none;
     box-shadow: 0px 1px 10px 3px rgba(0,0,0,0.16);
+    font-size: 20px;
 }
 
-    #link {
-        margin-top: 30px;
-        background-color: #ebebeb
+    .primaryCard {
+        border-radius: 45px;
     }
 
-        #link li.title {
+    .linkCard {
+        background-color: #ebebeb;
+        padding: 0;
+        height: 40px;
+    }
+
+        .linkCard li.title {
             margin-bottom: 0;
         }
 
             #createNewLink {
                 color: #707070;
+                font-weight: 400;
             }
 
     .displayCard .notDone, .done {
-        left: calc(80% - 30px);
+        position: relative;
+        left: calc(100% - 30px);
+        top: 30px;
+        margin-top: -30px;
         height: 30px;
         width: 30px;
         border-radius: 50%;
-        position: absolute;
     }
 
     .displayCard .notDone {
@@ -108,27 +140,36 @@ nav {
         background-color: #00c9b5;
     }
 
-    .displayCard .title {
+    .displayCard .title, .displayCard .mainTitle {
         text-align: center;
-        font-size: 30px;
         margin-bottom: 15px;
+    }
+
+    .displayCard .title {
+        font-size: 24px;
+    }
+
+    .displayCard .mainTitle {
+        font-size: 30px;
     }
 
     .displayCard .description {
         font-weight: 400;
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .displayCard .responsibles {
+        margin-top: 15px;
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         height: 30px;
+        color: #00c9b5;
     }
     .displayCard .responsibles span {
         margin: 5px;
-        font-size: 20px;
+        font-size: 18px;
     }
         .displayCard .responsibles .responsibleName {
             padding: 5px 15px;
@@ -145,10 +186,6 @@ nav {
         color: #707070;
         text-decoration: none;
     }
-
-#oneProjectCard {
-    margin-top: 30px;
-}
 
 .notfooter {
     flex: 1 0 auto;
