feat(addCard): add datetime picker using the flatpickr library

--- a/Views/Shared/_layoutHeadPartial.cshtml
+++ b/Views/Shared/_layoutHeadPartial.cshtml
@@ -5,4 +5,5 @@
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Caveat:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400+700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/flatpickr.css">
 </head>
