--- a/Views/Card/AddCard.cshtml
+++ b/Views/Card/AddCard.cshtml
@@ -10,7 +10,9 @@
     <form action="/users/projects/@project.Id/cards/addCard" method="POST">
         <input type="text" name="Title" placeholder="Title" required />
         <input type="text" name="Description" placeholder="Description" required />
-        <input type="date" name="Deadline" min="2019-08-07" max="2022-12-31" required />
+        <input type="datetime-local" name="Deadline" placeholder="Deadline"
+               id="dateTimePicker" required />
+        @await Html.PartialAsync("_ScriptForDatePickingPartial.cshtml")
         <select multiple name="collaboratorIds">
             @{ var otherResponsibles = project.AssigneeProjects.Where(ap => !ap.Assignee.UserName.Equals(User.Identity.Name));
                 foreach (AssigneeProject assigneeProject in otherResponsibles)
