--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -15,6 +15,33 @@ a {
     text-decoration: none;
 }
 
+/* ------------- first page specific ------------- */
+
+#brandName {
+    font-family: 'Caveat', cursive;
+    font-size: 120px;
+    color: #00c9b5;
+    margin: 0;
+}
+
+.mainPageContainer p {
+    margin: 15px 0;
+}
+
+#largeSignUp {
+    background-color: #00c9b5;
+    border-radius: 15px;
+    padding: 5px;
+    width: 270px;
+    margin-top: 20px;
+}
+    #largeSignUp a {
+        color: white;
+        font-size: 35px;
+    }
+
+/* ------------- horizontal nav bar ------------- */
+
 nav {
     background-color: #00c9b5;
     height: 95px;
@@ -44,7 +71,7 @@ nav {
         }
 
             nav div #signup {
-                border: 2px solid white;
+                border: 1px solid white;
                 border-radius: 15px;
             }
 
@@ -54,16 +81,24 @@ nav {
                 font-size: 55px;
             }
 
+/* ------------- containers ------------- */
+
 .displayCardsContainer {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    text-align: center;
     margin: 0 auto;
 }
 
     .primaryContainer {
         width: 80%;
+    }
+
+    .mainPageContainer {
+        width: 50%;
+        font-size: 26px;
     }
 
     .secondaryContainer {
@@ -90,6 +125,8 @@ nav {
     justify-content: space-between;
     margin: 20px 0 0 0;
 }
+
+/* ------------- displayCards ------------- */
 
 .displayCard {
     box-sizing: border-box;
@@ -187,6 +224,8 @@ nav {
         text-decoration: none;
     }
 
+/* ------------- footer (and helpers) ------------- */
+
 .notfooter {
     flex: 1 0 auto;
 }
@@ -204,6 +243,8 @@ nav {
     .footer a {
         color: #707070;
         text-decoration: underline;
+        font-size: 20px;
+        font-weight: bold;
     }
 
     .footer p{
