--- a/Pages/Shared/_publicLayout.cshtml
+++ b/Pages/Shared/_publicLayout.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="footer">
         <a href="/users/APIguide">For developers: a guide to our API services</a>
-        <p>This app uses the ASP.NET Core framework, and is hosted on Azure. Source code at </p>
+        <p>This app uses the ASP.NET Core framework, and is hosted on Azure.</p>
     </div>
 </body>
 </html>
