--- a/Views/Shared/_layoutHeadPartial.cshtml
+++ b/Views/Shared/_layoutHeadPartial.cshtml
@@ -6,4 +6,6 @@
     <link href="https://fonts.googleapis.com/css?family=Caveat:700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400+700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/flatpickr.css">
+    <link rel="stylesheet" href="/css/picker.min.css">
+
 </head>
