--- a/Views/Project/AddProject.cshtml
+++ b/Views/Project/AddProject.cshtml
@@ -3,35 +3,28 @@
 @{
     Layout = "_userLayout";
 }
+
 <div class="displayCardsContainer mainPageContainer firstContainer">
-    <ul class="displayCard">
-        <li class="title">Add new project</li>
-        <li>
-            <form action="/users/addProject" method="POST">
-                <ul id="inputContainer">
-                    <li>
-                        <input type="text" name="Title" placeholder="Title" required />
-                    </li>
-                    <li class="description">
-                        <textarea name="Description" placeholder="Description" required></textarea>
-                    </li>
-                    <li class="responsibles">
-                        <label for="multipleSelector">Collaborating with:</label>
-                        <select id="multipleSelector" multiple name="collaboratorIds" id="multipleSelector">
-                            <option value="" disabled hidden>Select collaborator(s)</option>
-                            @{ foreach (Assignee assignee in (List<Assignee>)ViewData["otherAssignees"])
-                                {
-                                    <option value="@assignee.Id">@assignee.UserName</option>
-                                }
-                            }
-                        </select>
-                        @await Html.PartialAsync("_ScriptForMultipleSelectPartial.cshtml")
-                    </li>
-                    <li>
-                        <button class="largeButton" type="submit">Submit</button>
-                    </li>
-                </ul>
-            </form>
-        </li>
-    </ul>
+    <div class="displayCard">
+        <div class="title">Add new project</div>
+        <form action="/users/addProject" method="POST">
+            <div id="inputContainer">
+                <input type="text" name="Title" placeholder="Title" required />
+                <textarea class="description" name="Description" placeholder="Description" required></textarea>
+                <div class="responsibles">
+                    <label for="multipleSelector">Collaborating with:</label>
+                    <select id="multipleSelector" multiple name="collaboratorIds">
+                        <option value="" disabled hidden>Select collaborator(s)</option>
+                        @{ foreach (Assignee assignee in (List<Assignee>)ViewData["otherAssignees"])
+                           {
+                               <option value="@assignee.Id">@assignee.UserName</option>
+                           }
+                         }
+                    </select>
+                    @await Html.PartialAsync("~/Views/Shared/_ScriptForMultipleSelectPartial.cshtml")
+                </div>
+                <button class="largeButton" type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
 </div>
