--- a/Pages/signUp.cshtml
+++ b/Pages/signUp.cshtml
@@ -2,9 +2,38 @@
 @{
     Layout = "_publicLayout";
 }
-<h1>Sign up for a new account using this form or Google!</h1>
-<form action="/signUp" method="POST">
-    <input type="text" name="name" required placeholder="Name" />
-    <input type="text" name="password" required placeholder="Password" />
-    <button type="submit">Go</button>
-</form>
+<div class="displayCardsContainer narrowContainer firstContainer">
+    <div class="displayCard">
+        <div class="title">Sign up</div>
+        <form class="validatedForm" action="/signUp" method="POST">
+            <div id="inputContainer">
+                <input type="text" name="Name" placeholder="Name" required />
+                <input type="password" name="password" placeholder="Password" required />
+                <input type="password" name="verifyPassword" placeholder="Verify Password" required /><span id='message'></span>
+                <button class="largeButton" type="submit">with TaskManager</button>
+            </div>
+        </form>
+        <div class="title" id="or">or</div>
+        <a class="largeButton" id="googleLink" href="google/link/to/be/researched">
+            <img src="~/googlelogo.png" alt="Google logo" height="30" width="30" />
+            <p>with Google</p>
+        </a>
+    </div>
+</div>
+
+<!--why does this not work :( https://codepen.io/diegoleme/pen/surIK -->
+<script>
+    var password = document.getElementById("password");
+    var confirm_password = document.getElementById("verifyPassword");
+
+    function validatePassword() {
+        if (password.value != confirm_password.value) {
+            confirm_password.setCustomValidity("Passwords Don't Match");
+        } else {
+            confirm_password.setCustomValidity('');
+        }
+    }
+
+    password.onchange = validatePassword;
+    confirm_password.onkeyup = validatePassword;
+</script>
