--- a/Views/Shared/_ScriptForMultipleSelectPartial.cshtml
+++ b/Views/Shared/_ScriptForMultipleSelectPartial.cshtml
@@ -1,9 +1,10 @@
-﻿<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+﻿<link rel="stylesheet" href="/css/picker.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="/js/picker.min.js"></script>
 <script>
-        $(document).ready(function () {
-            $('#multipleSelector').picker(
-                {limit: 7}
-            );
-        });
+    $(document).ready(function () {
+        $('#multipleSelector').picker(
+            { limit: 7 }
+        );
+    });
 </script>
