--- a/Pages/signUp.cshtml
+++ b/Pages/signUp.cshtml
@@ -8,9 +8,10 @@
         <form class="validatedForm" action="/signUp" method="POST">
             <div id="inputContainer">
                 <input type="text" name="Name" placeholder="Name" required />
-                <input type="password" name="password" placeholder="Password" required />
-                <input type="password" name="verifyPassword" placeholder="Verify Password" required /><span id='message'></span>
+                <input id="password" type="password" name="password" placeholder="Password" required />
+                <input id="verifyPassword" type="password" name="verifyPassword" placeholder="Verify Password" required /><span id='message'></span>
                 <button class="largeButton" type="submit">with TaskManager</button>
+                @await Html.PartialAsync("_VerifyPasswordScriptPartial.cshtml")
             </div>
         </form>
         <div class="title" id="or">or</div>
@@ -20,20 +21,3 @@
         </a>
     </div>
 </div>
-
-<!--why does this not work :( https://codepen.io/diegoleme/pen/surIK -->
-<script>
-    var password = document.getElementById("password");
-    var confirm_password = document.getElementById("verifyPassword");
-
-    function validatePassword() {
-        if (password.value != confirm_password.value) {
-            confirm_password.setCustomValidity("Passwords Don't Match");
-        } else {
-            confirm_password.setCustomValidity('');
-        }
-    }
-
-    password.onchange = validatePassword;
-    confirm_password.onkeyup = validatePassword;
-</script>
