feat(APIguide, Token): styling, other minor refactor

--- a/Pages/main.cshtml
+++ b/Pages/main.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = "_publicLayout";
 }
-    <div class="displayCardsContainer mainPageContainer firstContainer">
+    <div class="displayCardsContainer middleWidthContainer firstContainer">
         <p id="brandName">TaskManager</p>
         <p>is a free, lightweight platform for teams to keep track of their projects.</p>
         <p>Accounts are free, and you can choose to sign in using Google.</p>
