--- a/Views/Project/AddProject.cshtml
+++ b/Views/Project/AddProject.cshtml
@@ -4,7 +4,7 @@
     Layout = "_userLayout";
 }
 
-<div class="displayCardsContainer mainPageContainer firstContainer">
+<div class="displayCardsContainer middleWidthContainer firstContainer">
     <div class="displayCard">
         <div class="title">Add new project</div>
         <form action="/users/addProject" method="POST">
