--- a/Views/APIGuideAndToken/APIguide.cshtml
+++ b/Views/APIGuideAndToken/APIguide.cshtml
@@ -1,21 +1,58 @@
 ﻿@{
     Layout = "_userLayout";
 }
-<h1>How to use our TODO application's API services</h1>
-<p>At the moment, we have two endpoints to use.</p>
-<ul>
-    <li>
-        By sending a JSON object with the fields "name" and "password to "/api/add-assignee"
-        with the method POST, admins can create new assignees (in the role of simple user).
-    </li>
-    <li>
-        By sending a GET request to "/api/assignees", assignees can get a list of all assignees,
-        together with their TODOs.
-    </li>
-</ul>
-<p>
-    To use these services, you will need a token for authentication. Get yours
-    <a href="/users/token">
-        here!
-    </a>
-</p>
+
+<div class="displayCardsContainer primaryContainer firstContainer">
+    <div class="displayCard apiCard">
+        <div class="mainTitle">Our API services</div>
+        <div class="cardsInColumns">
+            <div class="displayCardsContainer secondaryContainer">
+                <p>Restricted to Admins</p>
+                <ul class="apiList">
+                    <li>
+                        By sending a POST request with a JSON object (fields: "name" and "password") to "/api/users",
+                        Admins can create new accounts (in the role of "User").
+                    </li>
+                    <li>
+                        By sending a GET request to "/api/users/all", Admins can get a JSON object containing
+                        the name and Id of every user.
+                    </li>
+                    <li>
+                        By sending a GET request to "/api/users/{Id}/userWithProjects", where "{Id}" represents
+                        the Id of any user, Admins can get a JSON object containing information regarding that
+                        user and their projects (containing the cards in each project).
+                    </li>
+                    <li>
+                        By sending a GET request to "/api/users/{Id}/userWithCards", where "{Id}" represents
+                        the Id of any user, Admins can get a JSON object containing information regarding that
+                        user and their cards (containing the projects each card is part of).
+                    </li>
+                </ul>
+            </div>
+            <div class="displayCardsContainer secondaryContainer">
+                <p>Accessible for everyone</p>
+                <ul class="apiList">
+                    <li>
+                        By sending a GET request to "/api/users/me/userWithProjects", users can get a JSON object
+                        containing information regarding their account and their projects (containing the cards in
+                        each project).
+                    </li>
+                    <li>
+                        By sending a PUT request with a corresponding JSON object to "/api/users/me/projects/{Id}", where
+                        "{Id}" represents an Id of an existing project of theirs, users can modify their projects. The required 
+                        format is the same as the one used by the userWithProjects endpoint.
+                    </li>
+                    <li>
+                        By sending a DELETE request to "/api/users/me/projects/{Id}", where "{Id}" represents an Id of an 
+                        existing project of theirs, users can delete their solo projects (i.e. if they haven't been collaborating 
+                        on them with anyone else).
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="title, apiTokenMessage">To use these services, you will need a token for authentication.</div>
+        <div class="largeButton">
+            <a class="largeButton" href="/users/token">Get your token</a>
+        </div>
+    </div>
+</div>
