--- a/Views/Roles/ChangeRole.cshtml
+++ b/Views/Roles/ChangeRole.cshtml
@@ -14,6 +14,10 @@
             <input type="text" name="motivation"/>
             <button type="submit">Submit</button>
         </form>
-        }
     }
-    <p>@ViewData["result"]</p>
+    }
+@{ if (ViewData["result"] != null)
+   {
+        <p>@ViewData["result"]</p>
+   }
+}
