--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -29,7 +29,7 @@ ul {
     margin: 0;
 }
 
-.mainPageContainer p {
+.middleWidthContainer p {
     margin: 15px 0;
 }
 
@@ -102,13 +102,13 @@ nav {
         width: 80%;
     }
 
-    .narrowContainer {
-        width: 30%;
-    }
-
-    .mainPageContainer {
+    .middleWidthContainer {
         width: 50%;
         font-size: 26px;
+    }
+
+    .narrowContainer {
+        width: 30%;
     }
 
     .secondaryContainer {
@@ -193,7 +193,7 @@ nav {
     }
 
     .displayCard .title {
-        font-size: 24px;
+        font-size: 22px;
     }
 
     .displayCard .mainTitle {
@@ -307,6 +307,41 @@ button.largeButton {
 #or {
     margin-top: 0;
     margin-bottom: 10px;
+}
+
+/* ------------- API guide specific ------------- */
+
+.apiList {
+    text-align: left;
+    list-style: disc;
+    font-weight: 400;
+    margin-left: 25px;
+}
+
+.apiList li {
+    margin: 15px 5px;
+}
+
+.apiTokenMessage {
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+.apiCard {
+    padding-bottom: 25px;
+}
+
+    .apiCard .largeButton {
+        font-size: 25px;
+        margin: 0 auto;
+    }
+
+/* ------------- API token specific ------------- */
+
+#token {
+    color: #707070;
+    overflow-wrap: break-word;
+    font-weight: 400;
 }
 
 /* ------------- footer (and helpers) ------------- */
