--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -20,6 +20,10 @@ ul {
     padding: 0;
 }
 
+#centerContent {
+    margin: 0 auto;
+}
+
 /* ------------- first page specific ------------- */
 
 #brandName {
