refactor: general cleanup, make views with empty controllers into pages

--- a/Views/Shared/_userLayout.cshtml
+++ b/Views/Shared/_userLayout.cshtml
@@ -18,7 +18,7 @@
             @RenderBody()
         </div>
     <div class="footer">
-        <a href="/users/APIguide">For developers: a guide to our API services</a>
+        <a href="/APIguide">For developers: a guide to our API services</a>
         <p>This app uses the ASP.NET Core framework, and is hosted on Azure.</p>
     </div>
 </body>
