--- a/TaskManager/TaskManager/Views/Card/AddCard.cshtml
+++ b/TaskManager/TaskManager/Views/Card/AddCard.cshtml
@@ -15,23 +15,25 @@
                     <textarea class="description" name="Description" placeholder="Description" required></textarea>
                     <input id="dateTimePicker" type="datetime-local" name="Deadline" placeholder="Deadline" required />
                     @await Html.PartialAsync("_ScriptForDatePickingPartial.cshtml")
-                    <div class="responsibles">
-                        <label for="multipleSelector">Collaborating with:</label>
-                        <select id="multipleSelector" multiple name="collaboratorIds">
-                            <option value="" disabled hidden>Select collaborator(s)</option>
-                            @{ var otherResponsibles = project.AssigneeProjects.Where(ap => !ap.Assignee.UserName.Equals(User.Identity.Name));
-                                foreach (AssigneeProject assigneeProject in otherResponsibles)
-                                {
-                                    <option value="@assigneeProject.Assignee.Id">@assigneeProject.Assignee.UserName</option>
-                                }
-                            }
-                       </select>
-                        @await Html.PartialAsync("~/Views/Shared/_ScriptForMultipleSelectPartial.cshtml")
-                    </div>
+                    @{var possibleCollaborators = project.AssigneeProjects.Where(ap => !ap.Assignee.UserName.Equals(User.Identity.Name));
+                        if (possibleCollaborators.Count() > 0)
+                        {
+                            <div class="responsibles">
+                                <label for="multipleSelector">Collaborating with:</label>
+                                <select id="multipleSelector" multiple name="collaboratorIds">
+                                    <option value="" disabled hidden>Select collaborator(s)</option>
+                                    @foreach (AssigneeProject assigneeProject in possibleCollaborators)
+                                     {
+                                        <option value="@assigneeProject.Assignee.Id">@assigneeProject.Assignee.UserName</option>
+                                     }
+                                </select>
+                            @await Html.PartialAsync("~/Views/Shared/_ScriptForMultipleSelectPartial.cshtml")
+                            </div>
+                        }
+                    }
                     <button class="largeButton" type="submit">Submit</button>
                 </div>
             </form>
         </div>
     </div>
  }
-       
