--- a/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
+++ b/TaskManager/TaskManager/Views/Project/_CardsPartial.cshtml
@@ -4,14 +4,16 @@
 @{ foreach (Card card in (List<Card>)ViewData["cards"])
     {
     <ul class="displayCard">
-        <li class=@(card.Done ? "done" : "notDone")>
-            <a href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a>
+        <li class="stats">
+            <p class="@(@card.Deadline < DateTime.Now && @ViewData["toggleName"].Equals("mark as done")? "pastDeadline" : "deadline")">               
+               deadline: @card.Deadline
+            </p>
+            <a class="toggleDone" href="@card.Project.Id/cards/@card.Id/toggleDone">@ViewData["toggleName"]</a>
         </li>
-        <li class="title">@card.Title</li>
+        <li class="title titleToBeCentered">@card.Title</li>
         <li class="description">@card.Description</li>
-        <li class="description">Deadline: @card.Deadline</li>
         <li class="responsibles">
-           @foreach (AssigneeCard assigneeCard in card.AssigneeCards)
+            @foreach (AssigneeCard assigneeCard in card.AssigneeCards)
             {
                 <span class="responsibleName">@assigneeCard.Assignee.UserName</span>
             }
