refactor(non-API integration tests): use a date attribute for selecting

--- a/TaskManager/TaskManager/Pages/Shared/_publicLayout.cshtml
+++ b/TaskManager/TaskManager/Pages/Shared/_publicLayout.cshtml
@@ -6,7 +6,7 @@
         <nav>
             <div>
                 <a href="/users">
-                    <h1 class="logo">TaskManager</h1>
+                    <h1 class="logo" data-test="logo">TaskManager</h1>
                 </a>
             </div>
             <div>
