--- a/TaskManager/TaskManager/Pages/login.cshtml
+++ b/TaskManager/TaskManager/Pages/login.cshtml
@@ -7,7 +7,7 @@
         <div class="title">Log in</div>
         <form action="/login" method="POST">
             <div id="inputContainer">
-                <input type="text" name="Name" placeholder="Name" required />
+                <input type="text" name="Name" placeholder="Name" data-cy="name" required />
                 <input type="password" name="Password" placeholder="Password" required />
                 <button class="largeButton" type="submit">with TaskManager</button>
                 <div class="title" id="or">or</div>
