--- a/TaskManager/TaskManager/Views/Shared/_userLayout.cshtml
+++ b/TaskManager/TaskManager/Views/Shared/_userLayout.cshtml
@@ -6,7 +6,7 @@
         <nav>
             <div>
                 <a href="/users">
-                    <h1 class="logo">TaskManager</h1>
+                    <h1 class="logo" data-test="logo">TaskManager</h1>
                 </a>
             </div>
             <div>
